# wesearch

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: package-validation.yml  publish-pypi.yml  sync-to-source.yml
typings/brotli/: __init__.pyi
wesearch/: __init__.py  errors.py  errors_test.py  mcp_server.py  mcp_server_test.py  profile.py  profile_test.py  ratelimit.py  ratelimit_test.py  scrape.py  scrape_test.py  search.py  search_test.py
wesearch/chrome/: __init__.py  chrome_android_useragents.txt  chrome_desktop_useragents.txt  headers.py  headers_test.py  useragents.py  useragents_test.py
wesearch/fetch/: __init__.py  challenge.py  challenge_test.py  common.py  common_test.py  conftest.py  curl.py  curl_test.py  fetch.py  fetch_test.py  stdlib.py  stdlib_test.py  test_helpers.py  transport_routing.py  transport_routing_test.py  zendriver-domains.txt  zendriver.py  zendriver_test.py
wesearch/lib/: __init__.py  custom_json.py  custom_json_test.py  userdirs.py  userdirs_test.py
wesearch/lib/testing/: __init__.py  main.py
wesearch/paper/: __init__.py  authors.py  authors_test.py  custom_types.py  details.py  details_test.py  errors.py  errors_test.py  fetch.py  fetch_test.py  fuse.py  fuse_test.py  ids.py  ids_test.py  paginate.py  paginate_test.py  search.py  search_test.py
wesearch/paper/providers/: __init__.py  openalex.py  openalex_test.py  s2.py  s2_test.py  searxng.py
