[project]
name = "wesearch"
version = "0.1.0"
description = "Web search, fetch, and paper-research toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{name = "rekursiv.ai", email = "hello@rekursiv.ai"}]
keywords = ["web", "search", "fetch", "scraping", "papers", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # web client / scraping
    "beautifulsoup4",
    "curl-cffi>=0.15",
    "zendriver>=0.15.5",
    # compression (Content-Encoding decode)
    "brotli",
    "zstandard",
    # lazy imports
    "wrapt",
]

[dependency-groups]
# uv sync --all-groups

debug = [
    "ipykernel",
    "ipython",
]
lint = [
    "codespell>=2.2.4",
    "pre-commit>=4.6",
    "ruff",
]
test = [
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=7.0",
]
typecheck = [
    "basedpyright>=1.10",
    "ty>=0.0.60",
]
dev = [
    {include-group = "debug"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typecheck"},
]

[project.optional-dependencies]
mcp = ["mcp>=1.10"]

[project.scripts]
wesearch-mcp = "wesearch.mcp_server:main"

[project.urls]
Homepage = "https://www.rekursiv.ai"
Repository = "https://github.com/rekursiv-ai/wesearch"
Documentation = "https://github.com/rekursiv-ai/wesearch/tree/main/docs"
Source = "https://github.com/rekursiv-ai/wesearch"
Issues = "https://github.com/rekursiv-ai/wesearch/issues"
Changelog = "https://github.com/rekursiv-ai/wesearch/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wesearch"]
exclude = ["**/*_test.py", "**/conftest.py"]

[tool.hatch.build.targets.sdist]
exclude = [".github/**", ".codespell-ignore"]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["*_test.py", "test_*.py"]
markers = [
    "ci_smoke: slower package smoke tests run explicitly in CI",
    "cuda: tests that require a real CUDA device (skipped in hosted CI)",
    "integration: tests that require networking or external CLIs (deselected by default)",
    "performance: timing-sensitive tests (deselected by default)",
    "cluster: requires live cluster access; deselected by default",
    "real_llm: integration tests that spawn a live LLM CLI; skipped unless RUN_REAL_LLM=1 is set",
    "slow: expensive local correctness test (JIT, full fixtures, git, bash, or a fresh interpreter); excluded from the fast unit tier",
]
addopts = "-m 'not ci_smoke and not cuda and not integration and not performance and not cluster and not slow' --durations=20 --dist=worksteal"
timeout = 60
# "error" = treat all warnings as errors (same as -Werror). Mirrors the root
# pyproject; only the web-relevant exceptions are carried over.
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",  # async subprocess cleanup after event loop closes
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:zendriver.core.connection",
]
norecursedirs = [
    "*.egg-info",
    ".agents",
    ".claude",
    ".hypothesis",
    ".venv",
    "__pycache__",
    "third_party",
    "typings",
]

[tool.coverage.run]
omit = [
    "*_test.py",
    "test_*.py",
    "*/tests/*",
    "*/.venv/*",
    "*/typings/*",
    "*/tools/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true

[tool.ruff]
show-fixes = true
line-length = 88
output-format = "concise"
target-version = "py312"
exclude = [
    ".venv/",
    "*.egg-info/",
    ".pytest_cache/",
    "build/",
    "dist/",
    "**/third_party/",
]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Module-level ignores.
    "ANN",     # Flake8 annotations. (We use pyright for type checking.)
    "C90",     # McCabe complexity.
    "COM812",  # Missing trailing comma. (select=ALL warning is unfixable.)

    # Relax docstring rules.
    "D100",    # Undocumented public module.
    "D101",    # Undocumented public class.
    "D102",    # Undocumented public method.
    "D103",    # Undocumented public function.
    "D104",    # Undocumented public package.
    "D105",    # Undocumented magic method.
    "D106",    # Undocumented public nested class.
    "D107",    # Undocumented public init.
    "D203",    # Incorrect blank line before class. (Conflicts with D211.)
    "D205",    # Missing blank line after summary.
    "D213",    # Multi-line summary second line. (Conflicts with D212.)
    "D400",    # Missing trailing period.
    "D401",    # Non-imperative mood.
    "D415",    # Missing terminal punctuation.
    "RUF001",  # Ambiguous unicode character string.
    "RUF002",  # Ambiguous unicode character docstring.
    "RUF003",  # Ambiguous unicode character comment.

    # Standard style relaxations.
    "A002",    # Builtin argument shadowing.
    "E501",    # Line too long. (Will be fixed by formatter.)
    "EM101",   # Raw string in exception.
    "EM102",   # F-string in exception.
    "ERA001",  # Commented-out code.
    "FBT001",  # Boolean type hint positional argument.
    "FBT002",  # Boolean default value positional argument.
    "FBT003",  # Boolean positional value in call.
    "FIX002",  # Line contains TODO.
    "FLY002",  # Consider f-string instead of join.
    "N806",    # Non-lowercase variable in function.
    "PLR0911", # Too many return statements.
    "PLR0912", # Too many branches.
    "PLR0913", # Too many arguments.
    "PLR0915", # Too many statements.
    "PLR2044", # Empty comment.
    "PLW0642", # Self or cls assignment.
    "RET504",  # Unnecessary assign.
    "TC001",   # Typing-only first-party import.
    "TC003",   # Typing-only standard library import.
    "TC006",   # Runtime cast value.
    "TD003",   # Missing TODO link.
    "TRY003",  # Raise vanilla args.
    "TRY300",  # Try consider else.

    # Additional style relaxations.
    "A001",    # Builtin variable shadowing.
    "DTZ006",  # Call datetime fromtimestamp.
    "EXE001",  # Shebang is present but file is not executable.
    "G004",    # Logging f-string.
    "PLR1704", # Redefined argument from local.
    "PLR2004", # Magic value comparison.
    "S101",    # Use of `assert` detected.
    "SIM108",  # If-else block instead of if-exp.
    "FIX001",  # Line contains FIXME.
    "TD001",   # Invalid TODO tag: `FIXME`
    "TD002",   # Missing author in TODO.
    "TD004",   # Missing colon in TODO
    "TD005",   # Missing issue description after `TODO`
]
exclude = [
    "**/typings/**",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Unused import.
]
"{*_test.py,**/tests/test*.py}" = [
    "INP001",  # Implicit namespace package. (Tests don't need __init__.py.)
    "PLR2004", # Magic value comparison.
    "S101",    # Use of `assert` detected.
    "S301",    # Pickle usage.
    "SLF001",  # Private member access.
]
# Mirrors the root pyproject: docs hold standalone scripts that print output.
"**/docs/**" = [
    "INP001",  # Standalone example/generation scripts.
    "T201",    # Print found. (Scripts print output.)
]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
default-section = "third-party"
detect-same-package = true
force-single-line = false
force-sort-within-sections = false
from-first = true
lines-between-types = 1
lines-after-imports = 2
extra-standard-library = ["typing", "typing_extensions", "ty_extensions"]
known-first-party = ["wesearch"]
no-lines-before = ["future"]
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
failOnWarnings = true  # Warnings fail the check (basedpyright default; pinned explicitly).
useLibraryCodeForTypes = false
exclude = [
    "**/.venv/",
    "**/node_modules/",
    "*.egg-info/",
    "**/*.ipynb",
    ".pytest_cache/",
    "build/",
    "dist/",
    "typings/",
    "**/third_party/",
    "**/typings/",
]
ignore = [
    "**/.venv/",
    "*.egg-info/",
    ".pytest_cache/",
    "build/",
    "dist/",
    "typings/",
    "**/third_party/",
]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportAny = false                          # `Any` propagation is pervasive (curl_cffi, bs4, zendriver).
reportExplicitAny = false                  # Explicit `Any` annotations are intentional.
reportImplicitStringConcatenation = false  # Conflicts with ruff ISC003.
reportInvalidCast = false                  # All cast() calls are intentional.
reportPrivateUsage = false                 # Redundant with ruff SLF001.
reportUnannotatedClassAttribute = false    # Class attributes don't always need annotations.
reportUnusedCallResult = false             # Discarding return values is idiomatic Python.
reportUnusedImport = false                 # Redundant with ruff F401.
# The standalone export ships a leaner type environment than the monorepo (fewer
# installed packages + stubs). The lazily-imported browser/scrape libs
# (zendriver, bs4) and some curl_cffi members resolve to Unknown here where the
# full monorepo env resolves them; these are stub-completeness gaps, not
# correctness issues.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingTypeStubs = false
reportCallInDefaultInitializer = false     # Immutable constructors in defaults are safe.
reportIncompatibleMethodOverride = false   # Subclasses may rename parameters.
reportMissingSuperCall = false             # Fires on plain `object` inheritance (no-op super).
reportImportCycles = false                 # Lazy imports inside functions create benign cycles.
reportUnsafeMultipleInheritance = false    # Mixin patterns are intentional.
reportMissingModuleSource = false
reportUnnecessaryTypeIgnoreComment = false

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportPrivateLocalImportUsage = false

[tool.ty.src]
exclude = [
    ".venv/",
    "*.egg-info/",
    ".pytest_cache/",
    "build/",
    "dist/",
    "typings/",
    "**/third_party/",
    "**/docs/",
]

[tool.ty.environment]
python-version = "3.12"
extra-paths = [
  "typings",
]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
all = "warn"

[[tool.ty.overrides]]
include = ["typings/**"]
[tool.ty.overrides.rules]
all = "ignore"

[[tool.ty.overrides]]
include = ["*_test.py"]
[tool.ty.overrides.rules]
invalid-key = "ignore"

[tool.codespell]
builtin = "clear,rare,code"
ignore-words = ".codespell-ignore"
skip = "htmlcov,.doctrees,*.pyc,*.ico,*.png,*.jpg,*.PNG,*.inv,*.dot,*.css,*.egg-info,uv.lock,__pycache__,.git,.venv,typings,**/third_party/,*_useragents.txt,*-domains.txt"

[tool.uv]
package = true
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
[tool.uv.pip]
compile-bytecode = true

[tool.uv.workspace]
members = []
